ftp: Only free connection if non-NULL

Only attempt to free the connection if it is non-NULL, to prevent
warnings like the following:
** (process:30854): CRITICAL **: g_vfs_ftp_connection_free: assertion 'conn != NULL' failed

The connection can be NULL if g_vfs_ftp_connection_new is cancelled.

https://bugzilla.gnome.org/show_bug.cgi?id=591054